feat: add deal api
